# Dendron-Template

./: .dendron.ws  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  dendron-user-2.code-workspace  dendron.code-workspace  dendron.yml  index.html  pyproject.toml
.github/workflows/: python_app.yaml  test.yaml
404/: index.html
500/: index.html
data/: dendron.json  fuse.json  notes.json  tree.json
data/meta/: 403.json  9djyueywhmefs6yxmu4wtn2.json  cblp5aoncbn1av54txaeaoq.json  grp7ckshjttino8qdemtzj0.json  ko1srdvolpl9crv2nakc7lv.json  oecyvhki1a4kfa4nqvhndgb.json  p6evbyfciaotkrkwav3ipra.json  vz00dg1dgfoav7puepignmd.json  zkl6gbhewmhy0u7mpczumw8.json
data/notes/: 9djyueywhmefs6yxmu4wtn2.html  9djyueywhmefs6yxmu4wtn2.md  cblp5aoncbn1av54txaeaoq.html  cblp5aoncbn1av54txaeaoq.md  grp7ckshjttino8qdemtzj0.html  grp7ckshjttino8qdemtzj0.md  ko1srdvolpl9crv2nakc7lv.html  oecyvhki1a4kfa4nqvhndgb.html  p6evbyfciaotkrkwav3ipra.html  p6evbyfciaotkrkwav3ipra.md  (+2 more)
env/: requirements.txt
notes/: .dendron.cache.json  Paper.md  docs.sphinx.md  outline.01.md  outline.md  paper.Abstract.md  paper.Conclusion.md  paper.Introduction.md  paper.Results-and-Discussion.md  paper.methods.md  paper.results-and-discussion.1.md  paper.results-and-discussion.2.md  paper.results-and-discussion.3.md  paper.results-and-discussion.4.md  paper.results-and-discussion.5.md  paper.results-and-discussion.6.md  paper.supplementary.md  paper.title.md  publish.md  publish.pdf.md  publish.word.md  python.docs.sphinx.md  root.md  user.Mjvolk3.md  user.Mjvolk3.tasks.future.md  vscode.extensions.md  workspace.tutorial.md
scripts/: setup-worktree.sh
(+73 files in other folders)
